--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "url": "https://github.com/Smast3r/tailwind/issues"
   },
   "homepage": "https://github.com/Smast3r/tailwind#readme",
-  "dependencies": {
+  "devDependencies": {
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.0",
     "tailwindcss": "^2.1.2"
   }
 }
